--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         }
 
         header ul.nav {
-            background-color: #003900 !important;
-            color: white,
+            background-color: white !important;
         }
 
         .nav-item a {
-            color: white;
+            color: #212529;
         }
 
         .breadcrumb .breadcrumb-item a {
@@ -219,7 +218,7 @@
         </div> -->
 
         <header>
-            <ul class="nav">
+            <ul class="nav border-bottom">
                 <li class="nav-item">
                     <a class="nav-link p-3" href="#"><i class="bi bi-geo-alt me-2"></i>Karlstad</a>
                 </li>
@@ -254,18 +253,31 @@
                 <label class="btn btn-outline-secondary" for="btnradio2">Alla producenter</label>
             </div> -->
 
-            <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
-                <!-- <div class="d-flex justify-content-between align-items-end">
+            <ul class="list-group">
+                <li v-for="article, index in articles" :key="index" class="list-group-item rounded shadow-sm p-3 mb-2 border-0" @click.stop="openFormModal(article)">
+                  <div class="d-flex align-items-center">
+                    <img :src="article.image" alt="Product Image" class="rounded" style="max-width: 70px;">
+                    <div class="ms-3 flex-grow-1">
+                      <h5 class="mb-0">{{ article.title }}</h5>
+                      <p class="mb-0">{{ article.description }}</p>
+                      <p class="text-muted mb-0">{{ article.price }} kr</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Add more list items as needed -->
+            </ul>
+
+            <!-- <div v-for="(category, categoryName) in items" :key="categoryName" class="category">
+                <div class="d-flex justify-content-between align-items-end">
                     <h6 class="mb-0">{{ categoryName }}</h6>
                     <a href="" style="color:#656f79;font-size: 0.875rem;text-decoration:none;line-height: 1">Visa alla <i style="font-size: 0.75rem" class="bi bi-chevron-right"></i></a>
-                </div> -->
+                </div>
                 <div>
                   <div :id="'tiny-slider-' + categoryName" class="tiny-slider mb-4">
                     <div v-for="(item, index) in category" :key="index" @click.stop="openFormModal(item)">
                         <div class="image-container shadow-sm">
                             <img v-if="item.image" :src="item.image" :alt="item.alt">
                             <div class="bg-white" v-else style="height:150px;width:150px"></div>
-                            <!-- <div class="image-overlay"></div> -->
                             <div class="text-bottom p-3">
                                 <div style="font-size:0.875rem">{{ item.title }}</div>
                                 <div v-if="item.price" class="ms-auto" style="font-size:1.125rem;font-weight:600">{{ item.price }} kr <span style="font-weight:400;font-size:0.875rem;color:#656f79">/ st</span></div>
@@ -274,7 +286,7 @@
                     </div>
                   </div>
                 </div>
-            </div>
+            </div> -->
         </div>
             
         <!-- <div class="d-flex align-items-center">
@@ -349,21 +361,36 @@
         el: '#app',
         data: {
             articles: [
-                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: 'https://via.placeholder.com/150' },
-                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
+                { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
+                { id: 1, title: 'Mjölk', description: 'Färsk mjölk från lokala gårdar', category: 'Mejeriprodukter', image: './frukt1.jpg', price: 169 },
+                { id: 2, title: 'Äpple', description: 'Färska äpplen av hög kvalitet', category: 'Frukt', image: './frukt2.jpg', price: 49 },
                 { id: 3, title: 'Köttbullar', description: 'Hemlagade köttbullar', category: 'Kött', image: 'https://via.placeholder.com/150' },
                 // Add more articles here
             ],
             categories: ['Frukt', 'Grönsaker', 'Mejeriprodukter', 'Bröd', 'Kött', 'Chark', 'Fisk', 'Skaldjur', 'Kolonialvaror', 'Drycker', 'Godis', 'Snacks', 'Färdigmat', 'Frysta produkter'],
             selectedCategories: [],
-            newArticle: { title: '', description: '', category: '', image: '' },
-            selectedItem: null,
-            items: {
-                'Frukt': [
-                    { title: 'Klementiner', image: './frukt1.jpg', description: 'Ekologiskt odlade klementiner i påsar med 10st i varje påse.', price: 169 },
-                    { title: 'Jordgubbar', image: './frukt2.jpg', description: 'Ekologiskt odlade jordgubbar i box. (Ca 1 liter).', price: 49 }
-                ]
-            }
+            newArticle: { title: null, description: null, category: null, image: null, price: null },
+            selectedItem: null
         },
         mounted() {
             for (const categoryName in this.items) {
